[gd_scene load_steps=13 format=3 uid="uid://bxhlvffeydnmr"]

[ext_resource type="Script" path="res://Levels/world.gd" id="1_5tsyp"]
[ext_resource type="Texture2D" uid="uid://jeb4vm5ln02q" path="res://assets/images/bg/bg_iintro.png" id="2_qwdwf"]
[ext_resource type="PackedScene" uid="uid://t628ctc88cvo" path="res://Objects/old_clock.tscn" id="3_hph14"]
[ext_resource type="PackedScene" uid="uid://b4l7ncn65dutk" path="res://Objects/monitor_screen.tscn" id="4_la20h"]
[ext_resource type="PackedScene" uid="uid://bd07ym7t8rpdu" path="res://Objects/example_item.tscn" id="5_m2ui4"]
[ext_resource type="PackedScene" uid="uid://df0bgi3t6ulq7" path="res://Player/character.tscn" id="5_qn3fy"]
[ext_resource type="PackedScene" uid="uid://b44162keicw8x" path="res://UI/action_menu.tscn" id="6_mx2he"]
[ext_resource type="PackedScene" uid="uid://da8fx6gkc4e8c" path="res://Inventory/inventario.tscn" id="7_rhhdq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ajtg"]
size = Vector2(15.6869, 342)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yq8kt"]
size = Vector2(1.91795, 9.46132)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqy41"]
size = Vector2(0.00601888, 237.24)

[sub_resource type="LabelSettings" id="LabelSettings_g1ubl"]
font_size = 18
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="World" type="Node2D"]
light_mask = 0
position = Vector2(-1, -4)
script = ExtResource("1_5tsyp")

[node name="Level" type="Node2D" parent="."]
light_mask = 6
visibility_layer = 6
position = Vector2(-3.05176e-05, -3.05176e-05)

[node name="Background" type="Sprite2D" parent="Level"]
light_mask = 5
texture_filter = 1
position = Vector2(400, 299)
texture = ExtResource("2_qwdwf")

[node name="CollisionLimits" type="StaticBody2D" parent="Level"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/CollisionLimits"]
position = Vector2(623, 420)
shape = SubResource("RectangleShape2D_0ajtg")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Level/CollisionLimits"]
position = Vector2(353.028, 317)
rotation = -3.14159
scale = Vector2(33.7896, 0.130939)
shape = SubResource("RectangleShape2D_0ajtg")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Level/CollisionLimits"]
position = Vector2(320, 593)
rotation = -3.14159
scale = Vector2(332.288, -0.659418)
shape = SubResource("RectangleShape2D_yq8kt")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Level/CollisionLimits"]
position = Vector2(3.05176e-05, 509.22)
rotation = -3.14159
scale = Vector2(332.288, -0.659418)
shape = SubResource("RectangleShape2D_yqy41")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level/CollisionLimits"]
polygon = PackedVector2Array(2.00003, 428, 32, 398, 31, 368, 86, 327, 88, 336, 87, 299, 1.00003, 350)

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="Level"]
light_mask = 7
visibility_layer = 6
color = Color(0, 0, 0, 1)
energy = 0.94
blend_mode = 2
range_item_cull_mask = 7

[node name="OldClock" parent="Level" instance=ExtResource("3_hph14")]
position = Vector2(49, 208)

[node name="MonitorScreen" parent="Level" instance=ExtResource("4_la20h")]
position = Vector2(448, 187)
scale = Vector2(0.295898, 0.274654)

[node name="ExampleItem" parent="Level" instance=ExtResource("5_m2ui4")]
position = Vector2(554, 234)
scale = Vector2(1.54, 1.54)

[node name="Character" parent="." instance=ExtResource("5_qn3fy")]
light_mask = 1
position = Vector2(442, 346)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ActionMenu" parent="CanvasLayer" instance=ExtResource("6_mx2he")]

[node name="Label" type="Label" parent="CanvasLayer"]
visibility_layer = 512
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -600.0
offset_bottom = -560.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 16)
label_settings = SubResource("LabelSettings_g1ubl")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Inventario" parent="CanvasLayer" instance=ExtResource("7_rhhdq")]
visible = false
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.02
anchor_right = 0.91
anchor_bottom = 0.964
offset_left = 23.4
offset_top = -4.0
offset_right = -558.0
offset_bottom = -489.4
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(6.99, 6.99)
size_flags_horizontal = 4
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(401, 299)
scale = Vector2(600, 600)

[connection signal="clicked_and_close_action_menu" from="." to="Character" method="_on_world_clicked_and_close_action_menu"]
[connection signal="popup_menu" from="Character" to="." method="_on_player_popup_menu"]
[connection signal="popup_menu_close" from="Character" to="." method="_on_player_popup_menu_close"]
[connection signal="clicked_action" from="CanvasLayer/ActionMenu" to="." method="_on_action_menu_clicked_action"]
[connection signal="mouse_entered" from="CanvasLayer/ActionMenu" to="." method="_on_action_menu_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/ActionMenu" to="." method="_on_action_menu_mouse_exited"]
